Body with two jumbotrons as filler

--- a/wp-content/themes/ngTheme-master/partials/views/home.html
+++ b/wp-content/themes/ngTheme-master/partials/views/home.html
@@ -1,10 +1,17 @@
 <section class="container">
-  <div class="row">
-    <article class="col-xs-12 col-sm-10 col-md-8 col-lg-8 col-xs-offset-0 col-sm-offset-1 col-md-offset-2 col-lg-offset-2">
-      <h2>Hello World!</h2>
-      <p>You probably want to start by reading the <a href="http://wp-api.org/guides/getting-started.html" target="_blank">WP JSON REST API documentation.</a></p>
-    </article>
-  </div>
+	<br><br>
+	<div class="jumbotron">
+	  <h1>ALL YOUR SELLFORCE ARE BELONG TO US</h1>
+	  <p>In a mornal yaw.</p>
+	</div>
+ </div>
+ <div class="jumbotron">
+	  <h1>SELLFORCE</h1>
+	  <p>Rulla mig mot ett knäcke.</p>
+	</div>
+ </div>
+  
+
   <!-- 
     here we output the html that we have told Angular to trust
     using $sce.trustAsHtml. We cannot use {{}} for HTML strings 
