--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -1,10 +1,16 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-		But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth
+		<img id="logo" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg">
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-		But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth
+			<h1 class="pull-right">
+				<i class="fa fa-facebook-official"></i>
+				<i class="fa fa-twitter-square"></i>
+				<br>
+				<i class="fa fa-instagram"></i>
+				<i class="fa fa-reddit-square"></i>
+			</h1>
 		</div>
 	</div>
 
