--- a/wp-content/themes/ngTheme-master/partials/views/search.html
+++ b/wp-content/themes/ngTheme-master/partials/views/search.html
@@ -1,17 +1,12 @@
 <section class="container">
 	<br><br>
 	<div class="jumbotron">
-	  <h1>ALL YOUR SELLFORCE ARE BELONG TO US</h1>
+	  <h1>Search</h1>
 	  <p>In a mornal yaw.</p>
 	</div>
  </div>
- <div class="jumbotron">
-	  <h1>SELLFORCE</h1>
-	  <p>Rulla mig mot ett knäcke.</p>
-	</div>
- </div>
+ 
   
-
 
   <!-- 
     here we output the html that we have told Angular to trust
