--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 			<h1 class="pull-right">
-				<i class="fa fa-facebook-official"></i>
+				<i class="fa fa-facebook-square"></i>
 				<i class="fa fa-twitter-square"></i>
 				<br>
 				<i class="fa fa-instagram"></i>
