--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -1,10 +1,11 @@
 <section class="container">
 	<br><br>
 	<div class="jumbotron">
-	  <h1>Search</h1>
+		<p>- Search result -<p>
+	  <h1>ALL YOUR SELLFORCE ARE BELONG TO US</h1>
 	  <p>In a mornal yaw.</p>
 	</div>
- </div>
+
  
   
 
