--- a/wp-content/themes/ngTheme-master/partials/views/singleprop.html
+++ b/wp-content/themes/ngTheme-master/partials/views/singleprop.html
@@ -1,17 +1,13 @@
 <section class="container">
 	<br><br>
 	<div class="jumbotron">
-		<p>- Home / First page -</p>
+		<p>- Single property -<p>
 	  <h1>ALL YOUR SELLFORCE ARE BELONG TO US</h1>
 	  <p>In a mornal yaw.</p>
 	</div>
- <div class="jumbotron">
-	  <h1>SELLFORCE</h1>
-	  <p>Rulla mig mot ett knäcke.</p>
-	</div>
+
  
   
-
 
   <!-- 
     here we output the html that we have told Angular to trust
