La in den här kodsnutten "remove_action('template_redirect', 'redirect_canonical');" på rad 31 i functions.php inte helt säker på om det fungerar dock, vi får kika på't

--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -40,7 +40,7 @@
 	  <div class="input-group">
 	   <input type="search" class="form-control" id="search" placeholder="Område" ng-model="searchWord">
 	   	<span class="input-group-btn">
-	    	<button class="btn btn-default" type="button" ng-click="hittePou();">Sök</button>
+	    	<button class="btn btn-default" type="button" ng-click="search();">Sök</button>
 	   	</span>
 		</div>
 	</form>
