uppdateringar på partials

--- a/wp-content/themes/ngTheme-master/partials/footer.html
+++ b/wp-content/themes/ngTheme-master/partials/footer.html
@@ -1,3 +1,22 @@
-<section class="container">
-  <h2>Some really nice footer content...</h2>
-</section>
+
+	<div class="jumbotron footer">
+	  <div class="container">
+		  <div class="row">
+		  	<img id="footer-img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/plasma.jpg">
+		  </div>
+		  <div class="row">
+		  	<div class="col-xs-12 col-md-4 col-lg-4">
+		  		<p>
+		  		Sellforce<br> 
+		  		Mjaumjau 24<br>
+		  		666 23 Malmö<br>
+		  		Tel 23 66 66<br>
+		  		</p>
+		  	</div>
+		  	<div class="col-xs-12 col-md-8 col-lg-8">
+		  		<h2>Kontakta oss!</h2>
+		  	</div>
+
+		  </div>
+		</div>
+	</div>
