--- a/wp-content/themes/ngTheme-master/partials/views/about.html
+++ b/wp-content/themes/ngTheme-master/partials/views/about.html
@@ -1,14 +1,38 @@
 <section class="container">
-	<br><br>
-	<div class="jumbotron">
-		<p>- About -</p>
-	  <h1>ALL YOUR SELLFORCE ARE BELONG TO US</h1>
-	  <p>In a mornal yaw.</p>
+	<br>
+	<br>
+	<div class="row">
+		<div class="col-xs-12 col-md-12 col-lg-12">
+	  	<img id="about-img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/plasma.jpg">
+	  </div>
 	</div>
+	<h3>About</h3>
+	<br>
+  <div class="row">
+		<div class="col-xs-6 col-md-4 col-lg-4">
+  		<p>
+  			Lorem Ipsum er rett og slett dummytekst fra og for trykkeindustrien. Lorem Ipsum har vært bransjens standard for dummytekst helt siden 1500-tallet, da en ukjent boktrykker stokket en mengde bokstaver for å lage et prøveeksemplar av en bok. Lorem Ipsum har tålt tidens tann usedvanlig godt, og har i tillegg til å bestå gjennom fem århundrer også tålt spranget over til elektronisk typografi uten vesentlige endringer. Det finnes mange ulike varianter av Lorem Ipsum, men majoriteten av disse har blitt tuklet med på et eller annet vis. Det være seg innlagt humor eller tilfeldig genererte ord som ser langt fra troverdige ut. Skal man bruke avsnitt av Lorem Ipsum må man være sikker på at det ikke skjuler seg noe pinlig midt i teksten.
+  		</p>
+		</div>
+		<div class="col-xs-6 col-md-4 col-lg-4">
+  		<p>
+  			Lorem Ipsum ble gjort allment kjent i 1960-årene ved lanseringen av Letraset-ark med avsnitt fra Lorem Ipsum, og senere med sideombrekkingsprogrammet Aldus PageMaker som tok i bruk nettopp Lorem Ipsum for dummytekst. I motsetning til hva mange tror, er ikke Lorem Ipsum bare tilfeldig tekst. Dets røtter springer helt tilbake til et stykke klassisk latinsk litteratur fra 45 år f.kr., hvilket gjør det over 2000 år gammelt. Det finnes mange ulike varianter av Lorem Ipsum, men majoriteten av disse har blitt tuklet med på et eller annet vis. Det være seg innlagt humor eller tilfeldig genererte ord som ser langt fra troverdige ut. Skal man bruke avsnitt av Lorem Ipsum må man være sikker på at det ikke skjuler seg noe pinlig midt i teksten.
+  		</p>
+		</div>
+		<div class="col-xs-6 col-md-4 col-lg-4 about-images-column">
+			<div class="row">
+	  		<img class="thumbnail" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
+	  	</div>
+	  	<div class="row">
+	  		<img class="thumbnail" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
+	  	</div>
+		</div>
 
- 
-  
 
+
+
+
+		</div>
   <!-- 
     here we output the html that we have told Angular to trust
     using $sce.trustAsHtml. We cannot use {{}} for HTML strings 
