uppdateringar på partials, rättning i headercontroller - PropFactory NOT 'Property'.

--- a/wp-content/themes/ngTheme-master/partials/views/home.html
+++ b/wp-content/themes/ngTheme-master/partials/views/home.html
@@ -1,14 +1,76 @@
 <section class="container">
-	<br><br>
-	<div class="jumbotron">
-		<p>- Home / First page -</p>
-	  <h1>ALL YOUR SELLFORCE ARE BELONG TO US</h1>
-	  <p>In a mornal yaw.</p>
+	<h3>Home / Front</h3>
+	<div class="row">
+	  <div class="col-sm-6 col-md-4 col-lg-4">
+	    <div class="thumbnail">
+	    	<div class="caption">
+	      	<img class="fifty_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
+	      
+	        <h3 class="inline_block">Hatten Biff!<br>Nästan här</h3>
+	        <p>
+	        On todistettu, että lukijaa häiritsee sivun ulkoasu lukiessaan sivua. Lorem Ipsumin käytön tarkoitus on, että se omaa enemmän-tai-vähemmän normaalimpaa sanojen sijoitusta kuin 'Sisältöä tähän, sisältöä tähän'. Monet tietokoneen julkistusohjelmien pakkaukset ja nettisivueditorit käyttävät nyt Lorem Ipsumia heidän normaalina mallitekstinä. 'Lorem Ipsumia' etsittäessä löytyy monen monta nettisivua, jotka ovat vasta aluillaan. Useita versioita on muodostunut vuosien kuluessa, jotkut vahingossa.	
+	        </p>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="col-sm-6 col-md-4 col-lg-4">
+	    <div class="thumbnail">
+	      <div class="caption">
+	        <p>
+	        	Vastoin yleistä uskomusta, Lorem Ipsum ei ole vain sattumanvarainen teksti. Sillä on pitkät juuret klassisesta latinalaisesta kirjallisuudesta vuonna 45 eKr alkaen, tehden siitä yli 2000 vuotta vanhan. Richard McClintock, latinalainen professori Hampden-Sydneyn yliopistossa Virginiassa, etsi yhden vaikeaselkoisimmista latinalaisista sanoista, consectetur, Lorem Ipsumin kappaleesta ja etsi lainauksia sanasta klassisessa kirjallisuudessa löytäen varman lähteen. 
+	        </p>
+	        <img class="fifty_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
+	        <h3 class="inline_block">Ansiktsmängd<br>Hennes katt</h3>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="col-sm-6 col-md-4 col-lg-4">
+	    <div class="thumbnail">
+	      <div class="caption">
+	      	<img class="hundred_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/villa.jpg">
+	        <p>
+	         Richard McClintock, latinalainen professori Hampden-Sydneyn yliopistossa Virginiassa, etsi yhden vaikeaselkoisimmista latinalaisista sanoista, consectetur, Lorem Ipsumin kappaleesta ja etsi lainauksia sanasta klassisessa kirjallisuudessa löytäen varman lähteen. 
+	        </p>
+	      </div>
+	    </div>
+	  </div>
 	</div>
- <div class="jumbotron">
-	  <h1>SELLFORCE</h1>
-	  <p>Rulla mig mot ett knäcke.</p>
+	<div class="row">
+	  <div class="col-sm-6 col-md-4 col-lg-4">
+	    <div class="thumbnail">
+	    	<div class="caption">
+	      	<img class="fifty_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
+	      
+	        <h3 class="inline_block">Hatten Biff!<br>Nästan här</h3>
+	        <p>
+	        On todistettu, että lukijaa häiritsee sivun ulkoasu lukiessaan sivua. Lorem Ipsumin käytön tarkoitus on, että se omaa enemmän-tai-vähemmän normaalimpaa sanojen sijoitusta kuin 'Sisältöä tähän, sisältöä tähän'. Monet tietokoneen julkistusohjelmien pakkaukset ja nettisivueditorit käyttävät nyt Lorem Ipsumia heidän normaalina mallitekstinä. 'Lorem Ipsumia' etsittäessä löytyy monen monta nettisivua, jotka ovat vasta aluillaan. Useita versioita on muodostunut vuosien kuluessa, jotkut vahingossa.	
+	        </p>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="col-sm-6 col-md-4 col-lg-4">
+	    <div class="thumbnail">
+	      <div class="caption">
+	        <p>
+	        	Vastoin yleistä uskomusta, Lorem Ipsum ei ole vain sattumanvarainen teksti. Sillä on pitkät juuret klassisesta latinalaisesta kirjallisuudesta vuonna 45 eKr alkaen, tehden siitä yli 2000 vuotta vanhan. Richard McClintock, latinalainen professori Hampden-Sydneyn yliopistossa Virginiassa, etsi yhden vaikeaselkoisimmista latinalaisista sanoista, consectetur, Lorem Ipsumin kappaleesta ja etsi lainauksia sanasta klassisessa kirjallisuudessa löytäen varman lähteen. 
+	        </p>
+	        <img class="fifty_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
+	        <h3 class="inline_block">Ansiktsmängd<br>Hennes katt</h3>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="col-sm-6 col-md-4 col-lg-4">
+	    <div class="thumbnail">
+	      <div class="caption">
+	      	<img class="hundred_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/villa.jpg">
+	        <p>
+	         Richard McClintock, latinalainen professori Hampden-Sydneyn yliopistossa Virginiassa, etsi yhden vaikeaselkoisimmista latinalaisista sanoista, consectetur, Lorem Ipsumin kappaleesta ja etsi lainauksia sanasta klassisessa kirjallisuudessa löytäen varman lähteen. 
+	        </p>
+	      </div>
+	    </div>
+	  </div>
 	</div>
+
  
   
 
