uppdateringar partials, la till mapp med wireframes

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -1,10 +1,14 @@
 <section class="container">
-	<br><br>
-	<div class="jumbotron">
-		<p>- Search result -<p>
-	  <h1>ALL YOUR SELLFORCE ARE BELONG TO US</h1>
-	  <p>In a mornal yaw.</p>
+	<div class="row">
+		<div class="panel panel-default col-sm-3 col-md-3 col-lg-3"></div>
+		<div class="panel panel-default col-sm-3 col-md-3 col-lg-3"></div>
+		<div class="panel panel-default col-sm-3 col-md-3 col-lg-3"></div>
+  <div class="panel-body">
+    Basic panel example
+  </div>
+</div>
 	</div>
+	
 
  
   
