--- a/wp-content/themes/ngTheme-master/partials/views/singleprop.html
+++ b/wp-content/themes/ngTheme-master/partials/views/singleprop.html
@@ -1,9 +1,14 @@
 <section class="container">
-	<br><br>
-	<div class="jumbotron">
-		<p>- Single property -<p>
-	  <h1>ALL YOUR SELLFORCE ARE BELONG TO US</h1>
-	  <p>In a mornal yaw.</p>
+	<h3>Single property - all info</h3>
+	<div class="row fityrow">
+		<div class="col-xs-12 col-md-12 col-lg-12">
+			<img class="big_image" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/renovering.jpg">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6 col-md-6 col-lg-6">
+		
+		</div>
 	</div>
 
  
