uppdatering partial searchresult

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -1,18 +1,23 @@
 <section class="container">
+<h3>Search results</h3>
 	<div class="row">
-		<div class="panel panel-default col-sm-3 col-md-3 col-lg-3"></div>
-		<div class="panel panel-default col-sm-3 col-md-3 col-lg-3"></div>
-		<div class="panel panel-default col-sm-3 col-md-3 col-lg-3"></div>
-  <div class="panel-body">
-    Basic panel example
+	  <div class="col-sm-4 col-md-4 col-lg-4">
+	    <div class="thumbnail">
+	      <img class="hundred_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
+      </div>
+    </div>
+    	<div class="col-sm-4 col-md-4 col-lg-4">
+			  <p>Titel</p>
+	    	<p>Pris</p>
+	    	<p>Relevant info</p>
+	    	<p>Driftskostnad</p>
+	    	<p>Yta</p>
+	    	<p>Årsförbrukning</p>
+		  </div>
+    <div class="col-sm-4 col-md-4 col-lg-4">
+	    <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. You understand? Hey, look at me when I'm talking to you, motherfucker. </p>
+    </div>
   </div>
-</div>
-	</div>
-	
-
- 
-  
-
   <!-- 
     here we output the html that we have told Angular to trust
     using $sce.trustAsHtml. We cannot use {{}} for HTML strings 
