--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -1,12 +1,12 @@
 <section class="container">
 <h3>Search results</h3>
 	<div class="row">
-	  <div class="col-sm-4 col-md-4 col-lg-4">
+	  <div class="col-sm-4 col-md-3 col-lg-3">
 	    <div class="thumbnail">
 	      <img class="hundred_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
       </div>
     </div>
-    	<div class="col-sm-4 col-md-4 col-lg-4">
+    	<div class="col-sm-4 col-md-3 col-lg-3">
 			  <p>Titel</p>
 	    	<p>Pris</p>
 	    	<p>Relevant info</p>
@@ -14,10 +14,35 @@
 	    	<p>Yta</p>
 	    	<p>Årsförbrukning</p>
 		  </div>
-    <div class="col-sm-4 col-md-4 col-lg-4">
-	    <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. You understand? Hey, look at me when I'm talking to you, motherfucker. </p>
+    <div class="col-sm-4 col-md-3 col-lg-3">
+	    <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is.</p>
     </div>
+<!-- Filterbox
+			<div class="col-sm-4 col-md-3 col-lg-3 filterbox">
+  		<h3>Filterbox</h3>
+	    <form role="form">
+		    <div class="checkbox">
+		      <label><input type="checkbox" value="">Option 1</label>
+		    </div>
+		    <div class="checkbox">
+		      <label><input type="checkbox" value="">Option 2</label>
+		    </div>
+		    <div class="checkbox">
+		      <label><input type="checkbox" value="">Option 3</label>
+		    </div>
+		    <div class="checkbox">
+		      <label><input type="checkbox" value="">Option 4</label>
+		    </div>
+		    <div class="checkbox">
+		      <label><input type="checkbox" value="">Option 5</label>
+		    </div>
+		  </form>
+		</div>
+						-->
+
   </div>
+  
+
   <!-- 
     here we output the html that we have told Angular to trust
     using $sce.trustAsHtml. We cannot use {{}} for HTML strings 
