--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -1,12 +1,12 @@
 <section class="container">
 <h3>Search results</h3>
 	<div class="row">
-	  <div class="col-sm-4 col-md-3 col-lg-3">
-	    <div class="thumbnail">
-	      <img class="hundred_img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/stuga2.jpg">
-      </div>
+	  <div class="col-sm-4 col-md-3 col-lg-3">	    
     </div>
     	<div class="col-sm-4 col-md-4 col-lg-4" ng-repeat="property in properties">
+			<div class="thumbnail">
+	    		<img ng-src="{{property.media[0].source}}" class="hundred_img">
+    		</div>
 			<p>{{property.base_post.title}}</p>
 	    	<p>Pris: {{property.facts.asking-price}}</p>
 	    	<p>Driftskostnad: {{property.facts.running-consts}}</p>
