changes in searchresult.html

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -11,11 +11,9 @@
 	    	<p>Pris: {{property.facts.asking-price}}</p>
 	    	<p>Driftskostnad: {{property.facts.running-consts}}</p>
 	    	<p>Yta: {{property.facts.area}}</p>
+	    	<p><!-- {{property.base_post.excerpt}} --></p>
 	    	<hr>
-		 </div>
-    <div class="col-sm-4 col-md-4 col-lg-4">
-	    <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. You understand? Hey, look at me when I'm talking to you, motherfucker. </p>
-    </div>
+		</div>
 <!-- Filterbox
 			<div class="col-sm-4 col-md-3 col-lg-3 filterbox">
   		<h3>Filterbox</h3>
