Deleted highfen between searchresult words

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -8,8 +8,8 @@
 	    		<img ng-src="{{property.media[0].source}}" class="hundred_img">
     		</div>
 			<p>{{property.base_post.title}}</p>
-	    	<p>Pris: {{property.facts.asking-price}}</p>
-	    	<p>Driftskostnad: {{property.facts.running-consts}}</p>
+	    	<p>Pris: {{property.facts.asking_price}}</p>
+	    	<p>Driftskostnad: {{property.facts.running_costs}}</p>
 	    	<p>Yta: {{property.facts.area}}</p>
 	    	<p><!-- {{property.base_post.excerpt}} --></p>
 	    	<hr>
