Change to underscore

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -8,8 +8,8 @@
     </div>
     	<div class="col-sm-4 col-md-4 col-lg-4">
 			  <p>{{property.base_post.title}}</p>
-	    	<p>Pris: {{property.facts.asking-price}}</p>
-	    	<p>Driftskostnad: {{property.facts.running-costs}}</p>
+	    	<p>Pris: {{property.facts.asking_price}}</p>
+	    	<p>Driftskostnad: {{property.facts.running_costs}}</p>
 	    	<p>Yta: {{property.facts.area}}</p>
 		  </div>
     <div class="col-sm-4 col-md-4 col-lg-4">
