--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -1,7 +1,7 @@
 <div class="container" ng-controller="headerController">
 	<div class="row">
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-		<img id="logo" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg">
+		<a href="" ng-click="goTo('/');"><img id="logo" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg"></a>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 			<h1 class="pull-right">
@@ -13,7 +13,6 @@
 			</h1>
 		</div>
 	</div>
-
 
 <!-- C/P navbar from Bootstrap components -->
 
