--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -7,10 +7,10 @@
 	      		<img ng-src="{{property.media[0].source}}" class="hundred_img">
       		</div>
       		<div class="col-sm-4 col-md-4 col-lg-4">
-					  <p>{{property.base_post.title}}</p>
-			    	<p>Pris: {{property.facts.asking_price}}</p>
-			    	<p>Driftskostnad: {{property.facts.running_costs}}</p>
-			    	<p>Yta: {{property.facts.area}}</p>
+						<p>{{property.base_post.title}}</p>
+			    	<p>Pris: {{property.facts.asking_price}} kr</p>
+			    	<p>Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
+			    	<p>Yta: {{property.facts.area}} kvadratmeter</p>
 				  </div>
 				  <div class="col-sm-4 col-md-4 col-lg-4">
 				  	<p><!-- {{property.base_post.excerpt}} -->post.excerpt</p>
