--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -5,11 +5,11 @@
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 			<h1 class="pull-right">
-				<i class="fa fa-facebook-square"></i>
-				<i class="fa fa-twitter-square"></i>
+				<a href="https://www.facebook.com"><i class="fa fa-facebook-square" style="color:black"></i><a/>
+				<a href="https://www.twitter.com"><i class="fa fa-twitter-square" style="color:black"></i><a/>
 				<br>
-				<i class="fa fa-instagram"></i>
-				<i class="fa fa-reddit-square"></i>
+				<a href="https://instagram.com/"><i class="fa fa-instagram" style="color:black"></i><a/>
+				<a href="http://www.reddit.com/"><i class="fa fa-reddit-square" style="color:black"></i><a/>
 			</h1>
 		</div>
 	</div>
