ng-submit on <form>-tag makes it possible to search on enter now yey!

--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -35,7 +35,7 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>	
-	<form>
+	<form ng-submit="search();">
 	  <div class="input-group">
 	   <input type="search" class="form-control" id="search" placeholder="Område" ng-model="searchWord">
 	   	<span class="input-group-btn">
