Added click funktion to pricture in searchresult.html

--- a/wp-content/themes/ngTheme-master/style.css
+++ b/wp-content/themes/ngTheme-master/style.css
@@ -6554,6 +6554,11 @@ button.close {
 
 /* -------------------- Begin SELLFORCE! -------------------- */
 
+#customSocialMediaLinks {
+  color: black;
+  font-size: 40px;
+}
+
 .filterbox {
 	display: inline-block;
 }
