--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -4,13 +4,13 @@
 		<a href="" ng-click="goTo('/');"><img id="logo" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg"></a>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<h1 class="pull-right">
-				<a href="https://www.facebook.com"><i class="fa fa-facebook-square" style="color:black"></i><a/>
+			<div class="pull-right" id="customSocialMediaLinks">
+				<a href="https://www.facebook.com"><i class="fa fa-facebook-square" style=""></i><a/>
 				<a href="https://www.twitter.com"><i class="fa fa-twitter-square" style="color:black"></i><a/>
 				<br>
 				<a href="https://instagram.com/"><i class="fa fa-instagram" style="color:black"></i><a/>
 				<a href="http://www.reddit.com/"><i class="fa fa-reddit-square" style="color:black"></i><a/>
-			</h1>
+			</div>
 		</div>
 	</div>
 
