Added textfield to Searchresult

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -23,7 +23,7 @@
 	  		<h3>Filtrera resultat</h3>
 		    <form role="form">
 			    <div class="textbox">
-			      <label>Prisintervall: </br><input type="text" value=""></label>
+			      <label>Prisintervall: </br><input type="text" value=""><input type="text" value=""></label>
 			    </div>
 			    <div class="textbox">
 			      <label>Stad: </br><input type="text" value=""></label>
