--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-sm-12" ng-repeat="property in properties">
           <div class="thumbnail col-sm-4 col-md-4 col-lg-4">
-	      		<img ng-click="showSingleProp(property.base_post.slug);" ng-src="{{property.media[0].source}}" class="hundred_img">
+	      		<img ng-click="showSingleProp(property.base_post.slug);" ng-src="{{property.media[0].source}}" class="hundred_img img-responsive">
       		</div>
       		<div class="col-sm-4 col-md-4 col-lg-4">
 					<p>{{property.base_post.title}}</p>
@@ -12,8 +12,7 @@
 			    	<p>Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
 			    	<p>Yta: {{property.facts.area}} kvadratmeter</p>
 				  </div>
-				  <div class="col-sm-4 col-md-4 col-lg-4">
-				  	<p><!-- {{property.base_post.excerpt}} -->post.excerpt</p>
+				  <div class="col-sm-4 col-md-4 col-lg-4" ng-bind-html="property.base_post.excerpt">
 				  </div>
         </div>
       </div>
